--- a/code-generator.html
+++ b/code-generator.html
@@ -51,24 +51,19 @@
         import { GoogleGenerativeAI } from "https://esm.run/@google/generative-ai";
         require.config({ paths: { 'vs': 'https://cdn.jsdelivr.net/npm/monaco-editor@0.34.1/min/vs' }});
         require(['vs/editor/editor.main'], function() {
-            async function loadGeminiApiKey() {
-                const fromStorage = localStorage.getItem('GEMINI_API_KEY');
-                if (fromStorage) return fromStorage.trim();
-                try {
-                    const response = await fetch('.env.local', { cache: 'no-store' });
-                    if (response.ok) {
-                        const text = await response.text();
-                        const match = text.match(/GEMINI_API_KEY\s*=\s*(.+)/);
-                        if (match) {
-                            const key = match[1].trim();
-                            localStorage.setItem('GEMINI_API_KEY', key);
-                            return key;
-                        }
-                    }
-                } catch (e) {
-                    // ignore fetch errors; fall through to throw below
+            async function serverGenerate(textPrompt) {
+                // Use serverless API route to hide key in production (e.g., Vercel)
+                const resp = await fetch('/api/gemini', {
+                    method: 'POST',
+                    headers: { 'Content-Type': 'application/json' },
+                    body: JSON.stringify({ prompt: textPrompt })
+                });
+                if (!resp.ok) {
+                    const err = await resp.text();
+                    throw new Error(`Server error ${resp.status}: ${err}`);
                 }
-                throw new Error('GEMINI_API_KEY not found. Run via a local web server so .env.local can be fetched, or set it once with localStorage.setItem("GEMINI_API_KEY", "<your_key>") and reload.');
+                const data = await resp.json();
+                return data.text || '';
             }
             var promptEditor = monaco.editor.create(document.getElementById('editor-container'), {
                 value: '//Your prompt goes here... \n',
@@ -106,12 +101,20 @@
 
                 try {
                     const modifiedPrompt = prompt + " code in {target_language} and print the output in a separate line";
-                    const apiKey = await loadGeminiApiKey();
-                    const genAI = new GoogleGenerativeAI(apiKey);
-                    const model = genAI.getGenerativeModel({ model: "gemini-1.5-flash" });
-                    const result = await model.generateContent(modifiedPrompt);
-                    const response = await result.response;
-                    const text = await response.text();
+                    let text = '';
+                    try {
+                        // Prefer server route (works on Vercel). If it fails, fall back to client key methods.
+                        text = await serverGenerate(modifiedPrompt);
+                    } catch (serverErr) {
+                        // Fallback for local-only usage
+                        const fromStorage = localStorage.getItem('GEMINI_API_KEY');
+                        if (!fromStorage) throw serverErr;
+                        const genAI = new GoogleGenerativeAI(fromStorage.trim());
+                        const model = genAI.getGenerativeModel({ model: 'gemini-1.5-flash' });
+                        const result = await model.generateContent(modifiedPrompt);
+                        const resp = await result.response;
+                        text = await resp.text();
+                    }
 
                     const outputIndex = text.indexOf('Output:');
                     const codeContent = outputIndex !== -1 ? text.substring(0, outputIndex).trim() : text.trim();
