--- a/code-generator.html
+++ b/code-generator.html
@@ -43,7 +43,7 @@
         <button id="copy_output_btn" class="cyberpunk2077 purple">Copy</button>
     </div>
     <footer>
-        <h2 class="cyberpunk glitched">Made by <span class="name">Arpit</span> </h2>
+        <h2 class="cyberpunk glitched">Made by <span class="name">Amit</span> </h2>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/monaco-editor@0.34.1/min/vs/loader.min.js"></script>
